--- a/runner.conf
+++ b/runner.conf
@@ -1,5 +1,5 @@
 root:              .
-tmp_path:          ./tmp
+tmp_path:          ./build
 build_name:        dappswin
 build_log:         runner-build-errors.log
 valid_ext:         .go, .tpl, .tmpl, .html, .json
