--- a/runner.conf
+++ b/runner.conf
@@ -4,7 +4,7 @@ build_name:        dappswin
 build_log:         runner-build-errors.log
 valid_ext:         .go, .tpl, .tmpl, .html, .json
 no_rebuild_ext:    .tpl, .tmpl, .html
-ignored:           assets, tmp, vendor
+ignored:           assets, tmp, vendor, build
 build_delay:       600
 colors:            1
 log_color_main:    cyan
