--- a/runner.conf
+++ b/runner.conf
@@ -2,7 +2,7 @@ root:              .
 tmp_path:          ./build
 build_name:        dappswin
 build_log:         runner-build-errors.log
-valid_ext:         .go, .tpl, .tmpl, .html, .json
+valid_ext:         .go, .tpl, .tmpl, .html, .json, *.toml
 no_rebuild_ext:    .tpl, .tmpl, .html
 ignored:           assets, tmp, vendor, build
 build_delay:       600
