--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,11 +24,6 @@
 #   go-tests = true
 #   unused-packages = true
 
-
-[[constraint]]
-  branch = "master"
-  name = "github.com/facebookgo/grace"
-
 [[constraint]]
   name = "github.com/gin-gonic/gin"
   version = "1.3.0"
@@ -56,3 +51,7 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  name = "github.com/gin-gonic/autotls"
+  version = "0.0.1"
