--- a/dappswin.toml
+++ b/dappswin.toml
@@ -6,16 +6,16 @@ EnableAdmin = false
 
 [eos]
 # TODO 节点池
-RPCURL = "https://proxy.eosnode.tools"
+# RPCURL = "https://jungle2.cryptolions.io"
 WalletURL = "unix:///home/xxp/eosio-wallet/keosd.sock"
 WalletPW = "PW5KEVCDpGccbv7cpXkoBD5eqESYtKiu4npo5ZmdJg2DpbXR9YMx6"
 GameAccount = "eosplaybrand"
-ICOAccount = "eosxiaoping1"
+ICOAccount = "xiaopingeos2"
 TokenAccount = "xxptoken1234"
 # FromBlkNum = 7529733
-FromBlkNum = 36499800
+FromBlkNum = 36670086
 
-# RPCURL = "https://proxy.eosnode.tools"
+RPCURL = "https://proxy.eosnode.tools"
 # WalletURL = "unix:///root/eosio-wallet/keosd.sock"
 # WalletPW = "PW5Jw3kodJVotFzaaUVz7H3KsesTRxwNY761kh1sDEctTcpwf2ubm"
 # GameAccount = "cryptogame12"
