--- a/dappswin.toml
+++ b/dappswin.toml
@@ -9,14 +9,15 @@ EnableAdmin = false
 
 [eos]
 # TODO 节点池
-RPCURL = "https://jungle2.cryptolions.io"
+RPCURL = "https://jungle.eos.dfuse.io"
 WalletURL = "unix:///home/xxp/eosio-wallet/keosd.sock"
 WalletPW = "PW5KEVCDpGccbv7cpXkoBD5eqESYtKiu4npo5ZmdJg2DpbXR9YMx6"
 GameAccount = "xxptoken1234"
 ICOAccount = "xiaopingeos2"
+# Token合约地址
 TokenAccount = "xxptoken1234"
 # FromBlkNum = 7529733
-FromBlkNum = 8894300
+FromBlkNum = 9171980
 
 # RPCURL = "https://proxy.eosnode.tools"
 # WalletURL = "unix:///root/eosio-wallet/keosd.sock"
@@ -34,6 +35,17 @@ ICOTotalAmount = 60000
 ICOFakeAmount = 12000
 TokenSymbol = "CGG"
 EOS_CGG = 20
+
+# 用户质押锁仓地址
+LockAccount = "xiaopingeos4"
+# 官方锁仓地址，计算流通数量
+OfficialLockAccount = "xxptoken1234"
+# CGG发行总量
+TotalCGGAmoount = 2e7
+UnstakePeriod = "1m"
+
+# 平台利润地址
+PlatformAccount = "xiaopingeos4"
 
 [mysql]
 host = "127.0.0.1"
